<resources>
    <string name="app_name">Ibtidaa</string>
    <string name="ibtidaa">IBTIDAA</string>
    <string name="ghazals">Ghazals</string>
    <string name="rekhta">Rekhta</string>
    <string name="shayari">Shayari</string>
    <string name="misc">Misc</string>
    <string name="ibtidaa_hindi">इब्तिदा</string>
    <string name="podcast">Podcast</string>
    <string name="home">Home</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="submit_data_title">Submit a Ghazal/Nazm</string>
    <string name="title">Title</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="season_1">Season 1</string>
    <string name="season_2">Season 2</string>
    <string name="season_3">Season 3</string>
    <string name="explore_header">Explore Various Collections</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="all_categories">Categories</string>
    <string name="rate_us">Rate Us</string>
    <string name="menu_slogan">Shayari, Ghazlo\'n Aur Nazmo\'n ka safar</string>
    <string name="share">Share</string>
    <string name="view_all"><![CDATA[View All >]]></string>
    <string name="nazm">Nazm</string>
    <string name="poem">Poems</string>
    <string name="play">Play</string>
    <string name="explore_ghazal_description">Read best collection of ghazals in Urdu, Hindi and English of all best Urdu poets</string>
    <string name="explore_shayari_description">Read best collection of shayari in Urdu, Hindi and English of all best Urdu poets</string>
    <string name="explore_nazm_description">Read best collection of nazm in Urdu, Hindi and English of all best Urdu poets</string>
    <string name="explore_poem_description">Read best collection of poems in Urdu, Hindi and English of all best Urdu poets</string>
    <string name="me">Me</string>
    <string name="poet">Poets</string>
    <string name="explore_poets_description">List of Poems and Biographical information of the most Famous Poets. Read and Enjoy Poetry by Famous Poets.</string>
    <string name="explore_podcaster_description">Biographical information of our Podcasters, Sit back and learn more about them</string>
    <string name="podcaster">Podcasters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_login_screen">Welcome To The World Of Ibitidaa</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="signupwithgoogle">Sign up with Google</string>
    <string name="signupwithanemail">Sign up with Email</string>
    <string name="title_description">Name it short and memorable</string>
    <string name="submission_title_hint">Example: Suna hai log use aankh bhar ke dekhte hain</string>
    <string name="writtenby">Written By</string>
    <string name="writtenby_description">Original writer of the piece</string>
    <string name="submission_writtenby_hint">Example: Ahmad Faraz</string>
    <string name="full_piece">Full Piece</string>
    <string name="piece_description">Format the piece accorgindly</string>
    <string name="submission_fullpiece_hint"> Example:\nsunā hai log use aañkh bhar ke dekhte haiñ\nso us ke shahr meñ kuchh din Thahar ke dekhte haiñ\nsunā hai rabt hai us ko ḳharāb-hāloñ se\nso apne aap ko barbād kar ke dekhte haiñ </string>
    <string name="submitted_by">Submitted By</string>
    <string name="submission_submitted_by_hint">Example: Ibitidaa</string>
    <string name="submitted_by_description">Provide your name below</string>
    <string name="submitted_by_handle">Instagram Handle / Email</string>
    <string name="submitted_by_handle_description">Provide your insta/email, we can contact you if needed</string>
    <string name="submission_submitted_by_handle_hint">Example: ibitidaa</string>
    <string name="submit">Submit</string>
    <string name="want_to_recite">Recite</string>
    <string name="want_to_recite_description">Let us know if you want to recite your own piece or other\'s</string>
    <string name="browse">Browse</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="upload_audio_description">Record yourself reciting 4 lines of a piece and upload here</string>
    <string name="submit_audio">Submit Your Voice Sample</string>
    <string name="err_text">Please verify the data</string>
    <string name="bookmark">Bookmark</string>
    <string name="download">Download</string>
    <string name="albumArt">Album Art Of The Episode</string>
    <string name="minimizeButton">Minimize Music Player</string>
    <string name="close_music_player">Close Music Player</string>
    <string name="more_info">More Info</string>
    <string name="term_and_conditions">By continuing, you agree to Ibtidaa\'s <b><a href="https://www.google.com">Terms and Conditions</a></b> and <b><a href="https://www.google.com">Privacy Policy</a></b></string>
    <string name="link_account">Link an account to log in faster in the future</string>
    <!--Facebook Related-->
    <string name="facebook_app_id">3483081268458197</string>
    <string name="fb_login_protocol_scheme">fb3483081268458197</string>
    <string name="err_firstName">Please double check your first name</string>
    <string name="err_lastName">Please double check your last name</string>
    <string name="err_email">Please double check your email</string>
    <string name="err_Password">Your password must contain at least 8 characters. Please fulfill all the below criteria:\n\nAt least one lower-case letter\n\nAt least one upper-case letter\n\nAt least one number\n\nAt least one special character</string>
    <string name="sign_up_description">Create an account to enjoy podcast, ghazals, nazm, shayari and more.</string>
    <string name="existing_account">Already have an account?\t</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password (8+ characters)</string>
    <string name="create_an_account">Create an account</string>
    <string name="err_title_piece">Please verify your title</string>
    <string name="err_name_author">Provide a human name</string>
    <string name="err_full_piece">Please verfiy the piece</string>
    <string name="err_submit_author">Please provide human name, unless you are elon musk\'s son</string>
    <string name="err_id_handle">Please verify your handle/mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="err_phone">Please select a valid phone number</string>
    <string name="otp_verification_description">Enter one time password sent on your mobile number</string>
    <string name="verification">Verification</string>
    <string name="confirm">Confirm</string>
    <string name="quit">Quit</string>
    <string name="err_fullName">Please check your name again</string>
    <string name="full_name">Full Name</string>
    <string name="key_image">key Image</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset_description">Provide your email, we will be sending OTP on your registered phone number to verify</string>
    <string name="new_password">New Password (8+ characters)</string>
    <string name="account_verified_description">Your account was verified. Please set your new password</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="new_to_ibtidaa">New to Ibtidaa?\t</string>
    <string name="err_matchPassword">Password did not match</string>
    <string name="loginPassword">Password</string>
    <string name="err_loginPassword">Incorrect Password</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back">Back</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>


</resources>