<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submission_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    tools:context=".Submission.SubmitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/submitDataLayout"
        android:background="@color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#191919"
            android:padding="10dp">

            <ImageView
                android:id="@+id/submit_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_sharp_clear_24" />

            <TextView
                android:id="@+id/submit_form_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:text="@string/submit_data_title"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/submitForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/title_piece"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_submission_text"
                        android:hint="@string/submission_title_hint"
                        android:padding="10dp"
                        android:maxLength="100"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="12dp" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writtenby"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writtenby_description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/name_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_submission_text"
                        android:hint="@string/submission_writtenby_hint"
                        android:padding="10dp"
                        android:maxLength="100"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="12dp" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_piece"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/piece_description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/full_piece"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_submission_text"
                        android:hint="@string/submission_fullpiece_hint"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="12dp" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/want_to_recite"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/want_to_recite_description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <RadioGroup
                        android:id="@+id/recite_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/recite_yes"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:background="@drawable/background_radio_recite_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="16dp"
                            android:text="Yes"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/recite_no"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:background="@drawable/background_radio_recite_selector"
                            android:button="@android:color/transparent"
                            android:elevation="4dp"
                            android:padding="16dp"
                            android:text="No"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />


                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/background_submission_text"
                        android:id="@+id/layout_audio_file_container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/upload_audio"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/upload_audio_description"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/browseAudioFile"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            app:cornerRadius="10dp"
                            android:padding="10dp"
                            android:text="@string/submit_audio"
                            android:elevation="4dp"
                            android:textAllCaps="false"
                            android:textColor="@color/buttonTextColor"
                            android:textStyle="bold"
                            android:textSize="12dp"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submitted_by"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submitted_by_description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/submit_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_submission_text"
                        android:hint="@string/submission_submitted_by_hint"
                        android:padding="10dp"
                        android:maxLength="100"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="12dp" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submitted_by_handle"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submitted_by_handle_description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/id_handle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_submission_text"
                        android:hint="@string/submission_submitted_by_handle_hint"
                        android:padding="10dp"
                        android:maxLength="100"
                        android:textColor="@color/white"
                        android:textColorHint="@color/hintColor"
                        android:textSize="12dp" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submitDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#191919"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitData"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:cornerRadius="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>