<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPassword_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".common.loginSignup.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/forgotPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#00000000"
            android:padding="10dp">

            <ImageView
                android:id="@+id/forgotPassword_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_sharp_clear_24"
                android:contentDescription="@string/quit" />

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/key_image"
                    android:src="@drawable/forgot_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="10dp"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="10dp"
                    android:text="@string/password_reset_description"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forgotPasswordEmailLayout"
                android:layout_below="@id/forgotPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/forgotPasswordEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_login"
                    android:hint="@string/email_address"
                    app:boxStrokeColor="#00696969"
                    app:hintTextColor="@color/white"
                    app:boxStrokeErrorColor="#00696969"
                    app:errorTextColor="@color/brightRed"
                    app:errorTextAppearance="@style/error_appearance"
                    app:placeholderTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEmailAddressInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="40dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgotPasswordNextBtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:cornerRadius="10dp"
                    android:text="Next"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/forgotPasswordProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:background="@drawable/background_loading"
        android:elevation="10dp">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"/>


    </LinearLayout>

</RelativeLayout>